--- a/happy-web/public/css/page-orphanages.css
+++ b/happy-web/public/css/page-orphanages.css
@@ -30,12 +30,14 @@ aside footer p {
 #mapid {
   width: 100%;
   height: 100%;
+  animation-delay: 200ms;
 }
 
 a.create-orphanage {
   position: absolute;
   right: 4rem;
   bottom: 4rem;
+  z-index: 10;
   width: 6.4rem;
   height: 6.4rem;
   background: #15c3d6;
@@ -49,4 +51,39 @@ a.create-orphanage {
 
 a.create-orphanage:hover {
   background: #17d6eb;
+}
+
+.leaflet-popup-content-wrapper {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.leaflet-popup-content {
+  color: #0089a5;
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: .8rem 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.leaflet-popup-content a {
+  width: 4rem;
+  height: 4rem;
+  background: #15c3b6;
+  box-shadow: 17.2868px 27.6589px 41.4884px rgba(23, 142, 166, 0.16);
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color .2s;
+}
+
+.leaflet-popup-content a:hover {
+  background: #17d6e8;
+}
+
+.leaflet-container {
+  font: 700 2rem/1 'Nunito', sans-serif;
+  z-index: 5;
 }
