--- a/happy-web/src/views/index.hbs
+++ b/happy-web/src/views/index.hbs
@@ -38,7 +38,7 @@
           <section class="visit">
             <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças.</p>
 
-            <a href="orphanages.html" class="animate-up">
+            <a href="/orphanages" class="animate-up">
               <img src="/images/arrow.svg" alt="Ir para o mapa">
             </a>
           </section>
