--- a/happy-web/src/views/create-orphanage.hbs
+++ b/happy-web/src/views/create-orphanage.hbs
@@ -46,7 +46,7 @@
       </aside>
 
       <main class="animate-appear with-sidebar">
-        <form action="">
+        <form action="save-orphanage" method="post" onsubmit="validate(event)">
           <fieldset>
             <legend>Dados</legend>
 
@@ -83,7 +83,13 @@
 
               <div class="images-upload" id="images">
                 <div class="new-upload">
-                  <input name="images" placeholder="Cole o link da foto aqui" required>
+                  <input 
+                    name="images" 
+                    placeholder="Cole o link da foto aqui" 
+                    required
+                    type="url"
+                  />
+
                   <span onclick="deleteField(event)">
                     <img src="/images/remove-file.svg" alt="Remover imagem">
                   </span>
@@ -106,7 +112,7 @@
 
             <div class="input-block">
               <label for="opening_hours">Horário das visitas</label>
-              <input id="opening_hours" name="opening_hours">
+              <input id="opening_hours" name="opening_hours" required>
             </div>
 
             <div class="input-block">
